--- a/public/index.html
+++ b/public/index.html
@@ -53,8 +53,8 @@
     </p>
 
     <p>
-      I work for <a href="http://www.wesabe.com">Wesabe</a>,<br>
-      and sometimes at<br>
+      I work at <a href="http://www.engineyard.com">Engine Yard</a>,<br>
+      and occasionally as<br>
       <a href="http://intuitivedirection.com">Intuitive Direction</a>.
     </p>
 
