Try to track hits in both GA profiles

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
     // Async Google Analytics
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-306556-1']);
+    _gaq.push(['_trackPageview']);
     _gaq.push(['_setDomainName', '.arko.net']);
     _gaq.push(['_trackPageview']);
 
