Update picture to andre_bangs.jpg

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
     img.andre {
       float: left;
       padding-left: 2em;
+      width:  37%;
+      height: 37%;
     }
 
     div.main {
@@ -59,7 +61,7 @@
     })();
   </script>
 
-  <img src="andre.png" alt="Andre Arko" class="andre">
+  <img src="andre.jpg" alt="Andre Arko" class="andre">
 
   <div class="main">
 
