Fix picture size

--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,9 @@
 
     img.andre {
       float: left;
-      padding-left: 2em;
-      width:  37%;
-      height: 37%;
+      padding: 1em 1em 0 2em;
+      width:  185px;
+      height: 278px;
     }
 
     div.main {
