--- a/public/index.html
+++ b/public/index.html
@@ -70,8 +70,9 @@
     </p>
 
     <p>
-      I work at <a href="http://www.engineyard.com">Engine Yard</a>,<br>
-      and occasionally as<br>
+      I work for <a href="http://www.plexapp.com">Plex</a> on<br>
+      server-side things,<br>
+      and sometimes as<br>
       <a href="http://intuitivedirection.com">Intuitive Direction</a>.
     </p>
 
