Just go with the obvious email address

--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
   <div class="main">
 
     <p class="hello">
-      Hi, I'm <a href="mailto:andre.arko@gmail.com" class="name">Andre Arko</a>.
+      Hi, I'm <a href="mailto:andre@arko.net" class="name">Andre Arko</a>.
     </p>
 
     <p>
