make the header a header

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       padding: 0 2em 0 4em;
     }
 
-    p.hello {
+    h1.hello {
       font-size: 1.2em;
     }
     a.name {
@@ -65,9 +65,9 @@
 
   <div class="main">
 
-    <p class="hello">
+    <h1 class="hello">
       Hi, I'm <a href="mailto:andre@arko.net" class="name">Andre Arko</a>.
-    </p>
+    </h1>
 
     <p>
       I work for <a href="http://www.plexapp.com">Plex</a> on<br>
