I'm really on those things after all

--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
 
     <p>
       I can also be found<br>
-      at <a href="http://www.facebook.com/andre.arko">facebook</a>, <a href="http://www.dopplr.com/traveller/indirect">dopplr</a>,<br>
+      on <a href="http://www.facebook.com/andre.arko">facebook</a>, <a href="http://www.dopplr.com/traveller/indirect">dopplr</a>,<br>
       <a href="http://pinboard.in/u:indirect/">pinboard</a>, and <a href="http://www.flickr.com/photos/andreocean/">flickr</a>.
     </p>
 
