--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,14 @@
 <html>
 <head>
   <title>Andre Arko</title>
+
+  <!-- Fonts from Typekit. Thanks, guys. -->
+  <script type="text/javascript" src="http://use.typekit.com/qhr5xpd.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
   <style type="text/css" media="screen">
     body {
-      font-family: skia, verdana, sans-serif;
+      font-family: museo;
       line-height: 1.3em;
       margin: 8em auto;
       max-width: 35em;
