they're ruby webapps, what can I say

--- a/public/index.html
+++ b/public/index.html
@@ -75,8 +75,8 @@
     </h1>
 
     <p>
-      I work for <a href="http://www.plexapp.com">Plex</a> on<br>
-      server-side things,<br>
+      I work for <a href="http://www.plexapp.com">Plex</a>, mostly<br>
+      writing Ruby webapps,<br>
       and sometimes as<br>
       <a href="http://intuitivedirection.com">Intuitive Direction</a>.
     </p>
