body text is better not-bold

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <style type="text/css" media="screen">
     body {
       font-family: museo;
+      font-weight: 200;
       line-height: 1.3em;
       margin: 8em auto;
       max-width: 35em;
