--- a/public/index.html
+++ b/public/index.html
@@ -76,8 +76,8 @@
     </h1>
 
     <p>
-      I work for <a href="http://www.plexapp.com">Plex</a>, mostly<br>
-      writing Ruby webapps,<br>
+      I work at <a href="http://tilde.io">Tilde</a>,<br>
+	  building webapps,<br>
       and sometimes as<br>
       <a href="http://intuitivedirection.com">Intuitive Direction</a>.
     </p>
