--- a/public/index.html
+++ b/public/index.html
@@ -76,10 +76,14 @@
     </h1>
 
     <p>
-      I work at <a href="http://tilde.io">Tilde</a>,<br>
-	  building webapps,<br>
-      and sometimes as<br>
-      <a href="http://intuitivedirection.com">Intuitive Direction</a>.
+      I build webapps, mostly<br>
+      in Ruby. If you'd like to,<br>
+      you can <a href="mailto:andre+hire@arko.net">hire me</a>.
+    </p>
+
+    <p>
+      My open source lives<br>
+      at <a href="http://intuitivedirection.com">Intuitive Direction</a>.
     </p>
 
     <p>
