fix duplicate if you'd like

--- a/public/index.html
+++ b/public/index.html
@@ -77,8 +77,8 @@
 
     <p>
       I build webapps, mostly<br>
-      in Ruby. If you'd like to,<br>
-      you can <a href="mailto:andre+hire@arko.net">hire me</a>.
+      in Ruby. You can <a href="mailto:andre+hire@arko.net">hire<br>
+      me</a> to help build yours.
     </p>
 
     <p>
