change hiring email address

--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
 
     <p>
       I build webapps, mostly<br>
-      in Ruby. You can <a href="mailto:andre+hire@arko.net">hire<br>
+      in Ruby. You can <a href="mailto:andre+arko@arko.net">hire<br>
       me</a> to help build yours.
     </p>
 
