--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Andre Arko</title>
+  <title>André Arko</title>
 
   <!-- Fonts from Typekit. Thanks, guys. -->
   <script type="text/javascript" src="http://use.typekit.com/qhr5xpd.js"></script>
@@ -67,12 +67,12 @@
     })();
   </script>
 
-  <img src="andre.jpg" alt="Andre Arko" class="andre">
+  <img src="andre.jpg" alt="André Arko" class="andre">
 
   <div class="main">
 
     <h1 class="hello">
-      Hi, I'm <a href="mailto:andre@arko.net" class="name">Andre Arko</a>.
+      Hi, I'm <a href="mailto:andre@arko.net" class="name">André Arko</a>.
     </h1>
 
     <p>
