--- a/public/index.html
+++ b/public/index.html
@@ -95,8 +95,8 @@
 
     <p>
       I can also be found<br>
-      on <a href="http://www.facebook.com/andre.arko">facebook</a>, <a href="http://www.dopplr.com/traveller/indirect">dopplr</a>,<br>
-      <a href="http://pinboard.in/u:indirect/">pinboard</a>, and <a href="http://www.flickr.com/photos/andreocean/">flickr</a>.
+      on <a href="http://www.facebook.com/andre.arko">facebook</a>, <a href="http://www.flickr.com/photos/andreocean/">flickr</a>,<br>
+      and <a href="http://pinboard.in/u:indirect/">pinboard</a>.
     </p>
 
   </div>
