swap flickr for instagram, add app.net

--- a/public/index.html
+++ b/public/index.html
@@ -94,9 +94,11 @@
     </p>
 
     <p>
-      I can also be found<br>
-      on <a href="http://www.facebook.com/andre.arko">facebook</a>, <a href="http://www.flickr.com/photos/andreocean/">flickr</a>,<br>
-      and <a href="http://pinboard.in/u:indirect/">pinboard</a>.
+      I can also be found on<br>
+      <a href="http://www.facebook.com/andre.arko">facebook</a>,
+      <a href="http://statigr.am/indirect">instagram</a>,<br>
+      <a href="http://pinboard.in/u:indirect/">pinboard</a>,
+      and <a href="http://alpha.app.net/indirect">app.net</a>.
     </p>
 
   </div>
