better twitter and github line length

--- a/public/index.html
+++ b/public/index.html
@@ -89,8 +89,8 @@
     <p>
       If you'd like to, you can<br>
       read my <a href="http://andre.arko.net/">blog</a> &amp; <a href="http://indirect.tumblr.com">tumblr</a>,<br>
-      follow me on <a href="http://twitter.com/indirect">twitter</a>,<br>
-      or fork me on <a href="http://github.com/indirect">github</a>.
+      follow my <a href="http://twitter.com/indirect">twitter</a> stream,<br>
+      or fork my code on <a href="http://github.com/indirect">github</a>.
     </p>
 
     <p>
