distinguish personal stuff from mavenlink OSS

--- a/public/index.html
+++ b/public/index.html
@@ -82,8 +82,8 @@
     </p>
 
     <p>
-      My open source lives<br>
-      at <a href="http://intuitivedirection.com">Intuitive Direction</a>.
+      My personal projects<br>
+      are <a href="http://intuitivedirection.com">Intuitive Direction</a>.
     </p>
 
     <p>
