--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,7 @@
 
     img.andre {
       float: left;
-      padding: 1em 1em 0 2em;
-      width:  185px;
-      height: 278px;
+      padding: 0.5em 0 0 2em;
     }
 
     div.main {
@@ -67,7 +65,7 @@
     })();
   </script>
 
-  <img src="andre.jpg" alt="André Arko" class="andre">
+  <img src="andre.jpg" alt="André Arko" class="andre" width="185" height="258">
 
   <div class="main">
 
