instagram has profiles now

--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
     <p>
       I can also be found on<br>
       <a href="http://www.facebook.com/andre.arko">facebook</a>,
-      <a href="http://statigr.am/indirect">instagram</a>,<br>
+      <a href="http://instagram.com/indirect">instagram</a>,<br>
       <a href="http://pinboard.in/u:indirect/">pinboard</a>,
       and <a href="http://alpha.app.net/indirect">app.net</a>.
     </p>
