back to hire me

--- a/public/index.html
+++ b/public/index.html
@@ -75,9 +75,10 @@
     </h1>
 
     <p>
-      I write <a href="http://dev.mavenlink.com/open-source/">open source</a>
-      at <a href="http://www.mavenlink.com/">Mavenlink</a>,
-      mostly in<br>Ruby and JavaScript.
+      I build webapps, mostly<br>
+      in Ruby and Javascript.<br>
+      You can <a href="mailto:andre+arko@arko.net">hire me</a> to help<br>
+      you build one yourself.
     </p>
 
     <p>
