--- a/public/index.html
+++ b/public/index.html
@@ -75,9 +75,13 @@
     </h1>
 
     <p>
-      I build webapps, mostly<br>
-      in Ruby and Javascript.<br>
-      You can <a href="mailto:andre+arko@arko.net">hire me</a> to help<br>
+      I work with <a href="http://cloudcity.io">Cloud City</a><br>
+      building websites. Lots<br>
+      of Ruby, Javascript, etc.<br>
+    </p>
+
+    <p>
+      You can <a href="mailto:andre+arko@cloudcity.io">hire us</a> to help<br>
       you build one yourself.
     </p>
 
