switch app.net to email

--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
       <a href="http://www.facebook.com/andre.arko">facebook</a>,
       <a href="http://instagram.com/indirect">instagram</a>,<br>
       <a href="http://pinboard.in/u:indirect/">pinboard</a>,
-      and <a href="http://alpha.app.net/indirect">app.net</a>.
+      and <a href="mailto:andre@arko.net">email</a>.
     </p>
 
   </div>
