new fonts! phew

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,17 @@
 
   <style type="text/css" media="screen">
     body {
-      font-family: museo;
-      font-weight: 300;
+      font-family: "chaparral-pro", serif;
+      font-weight: 400;
       line-height: 1.3em;
       margin: 8em auto;
       max-width: 35em;
+    }
+
+    h1 {
+      font-family: "p22-underground", sans-serif;
+      font-size: 1.2em;
+      font-weight: 600;
     }
 
     a {
@@ -41,10 +47,6 @@
       padding: 0 2em 0 4em;
     }
 
-    h1.hello {
-      font-size: 1.2em;
-      font-weight: 500;
-    }
     a.name {
       font-weight: bold;
     }
