--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,16 @@
   <style type="text/css" media="screen">
     body {
       font-family: "chaparral-pro", serif;
+      font-size: 14pt;
       font-weight: 400;
       line-height: 1.3em;
       margin: 8em auto;
-      max-width: 35em;
+      max-width: 38em;
     }
 
     h1 {
       font-family: "p22-underground", sans-serif;
-      font-size: 1.2em;
+      font-size: 1.6em;
       font-weight: 600;
     }
 
@@ -38,7 +39,7 @@
 
     img.andre {
       float: left;
-      padding: 0.5em 0 0 2em;
+      padding: 0;
     }
 
     div.main {
@@ -47,8 +48,8 @@
       padding: 0 2em 0 4em;
     }
 
-    a.name {
-      font-weight: bold;
+    p {
+      margin-top: 0;
     }
   </style>
 </head>
@@ -68,13 +69,13 @@
     })();
   </script>
 
-  <img src="andre.jpg" alt="André Arko" class="andre" width="185" height="258">
+  <h1 class="hello">
+    Hi, I'm <a href="mailto:andre@arko.net" class="name">André Arko</a>.
+  </h1>
+
+  <img src="andre.jpg" alt="André Arko" class="andre" width="296" height="413">
 
   <div class="main">
-
-    <h1 class="hello">
-      Hi, I'm <a href="mailto:andre@arko.net" class="name">André Arko</a>.
-    </h1>
 
     <p>
       I work with <a href="http://cloudcity.io">Cloud City</a><br>
