--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,11 @@
 
   <style type="text/css" media="screen">
     body {
+      color: #222;
       font-family: "chaparral-pro", serif;
-      font-size: 14pt;
       font-weight: 400;
-      line-height: 1.3em;
+      font-size: 14pt;
+      line-height: 1.4em;
       margin: 8em auto;
       max-width: 38em;
     }
@@ -24,18 +25,12 @@
     }
 
     a {
-      color: #4C4C4C;
+      color: #222;
       text-decoration: none;
-      border-bottom: 1px solid;
+      border-bottom: 1px solid #222;
     }
-
-    a:visited {
-      border: 0;
-    }
-
-    a:hover, a:visited:hover {
-      border-bottom: 2px solid;
-    }
+    a:hover, a:visited:hover { border: none; }
+    a:visited { border-color: #AAA; }
 
     img.andre {
       float: left;
