--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,9 @@
       font-weight: 400;
       font-size: 14pt;
       line-height: 1.4em;
-      margin: 8em auto;
-      max-width: 38em;
+      margin: 0 auto;
+      padding: 2em 0 2em 2em;
+      max-width: 580px;
     }
 
     h1 {
@@ -34,13 +35,12 @@
 
     img.andre {
       float: left;
-      padding: 0;
+      margin: 0 1em 3em 0;
     }
 
     div.main {
       float: left;
-      width: 12em;
-      padding: 0 0 0 4em;
+      padding-left: 3em;
     }
 
     p {
@@ -49,21 +49,6 @@
   </style>
 </head>
 <body>
-  <script type="text/javascript">
-    // Async Google Analytics
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-306556-1']);
-    _gaq.push(['_trackPageview']);
-    _gaq.push(['_setDomainName', '.arko.net']);
-    _gaq.push(['_trackPageview']);
-
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ga);
-    })();
-  </script>
-
   <h1 class="hello">
     Hi, I'm <a href="mailto:andre@arko.net" class="name">André Arko</a>.
   </h1>
@@ -104,5 +89,20 @@
     </p>
 
   </div>
+
+  <script type="text/javascript">
+    // Async Google Analytics
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-306556-1']);
+    _gaq.push(['_trackPageview']);
+    _gaq.push(['_setDomainName', '.arko.net']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ga);
+    })();
+  </script>
 </body>
 </html>
