add Ruby Together, Bundler, The Ruby Way

--- a/public/index.html
+++ b/public/index.html
@@ -56,21 +56,18 @@
   <img src="andre.jpg" alt="André Arko" class="andre" width="300" height="450">
 
   <div class="main">
+    <p>I founded <a href="https://rubytogether.org">Ruby Together</a>,<br>
+      and I'm lead developer of<br>
+      <a href="http://bundler.io">Bundler</a>. I also co-wrote<br>
+      <a href="http://therubyway.io">The Ruby Way</a>.
+    </p>
 
     <p>
       I work with <a href="http://cloudcity.io">Cloud City</a><br>
       building websites. Lots<br>
       of Ruby, Javascript, etc.<br>
-    </p>
-
-    <p>
       You can <a href="mailto:andre+arko@cloudcity.io">hire us</a> to help<br>
       you build one yourself.
-    </p>
-
-    <p>
-      My personal projects<br>
-      are <a href="http://intuitivedirection.com">Intuitive Direction</a>.
     </p>
 
     <p>
@@ -83,8 +80,8 @@
     <p>
       I can also be found on<br>
       <a href="http://www.facebook.com/andre.arko">facebook</a>,
-      <a href="http://instagram.com/indirect">instagram</a>,<br>
-      <a href="http://pinboard.in/u:indirect/">pinboard</a>,
+      <a href="http://speakerdeck.com/indirect/">speakerdeck</a>,<br>
+      <a href="http://instagram.com/indirect">instagram</a>,
       and <a href="mailto:andre@arko.net">email</a>.
     </p>
 
