update typekit call

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
   <title>André Arko</title>
 
   <!-- Fonts from Typekit. Thanks, guys. -->
-  <script type="text/javascript" src="http://use.typekit.com/qhr5xpd.js"></script>
-  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+  <script src="https://use.typekit.net/qhr5xpd.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
   <style type="text/css" media="screen">
     body {
