charset utf-8 even without encoding headers

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>André Arko</title>
 
   <script src="https://use.typekit.net/qhr5xpd.js"></script>
