--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
       building websites. Lots<br>
       of Ruby, Javascript, etc.<br>
       You can <a href="mailto:andre+arko@cloudcity.io">hire us</a> to help<br>
-      you build one yourself.
+      you build your own app.
     </p>
 
     <p>
