link to talks page on andre.arko.net

--- a/public/index.html
+++ b/public/index.html
@@ -54,8 +54,9 @@
   <div class="main">
     <p>I founded <a href="https://rubytogether.org">Ruby Together</a>,<br>
       and I'm lead developer of<br>
-      <a href="http://bundler.io">Bundler</a>. I also co-wrote<br>
-      <a href="http://therubyway.io">The Ruby Way</a>.
+      <a href="http://bundler.io">Bundler</a>. I co-authored<br>
+      <a href="http://therubyway.io">The Ruby Way</a>, and you<br>
+      may have <a href="http://andre.arko.net/talks">seen me speak</a>.
     </p>
 
     <p>
