--- a/public/index.html
+++ b/public/index.html
@@ -81,17 +81,17 @@
 
     <p>
       If you'd like to, you can<br>
-      read my <a href="http://andre.arko.net/">blog</a> &amp; <a href="http://indirect.tumblr.com">tumblr</a>,<br>
-      follow me on <a href="http://twitter.com/indirect">twitter</a>,<br>
-      or fork me at <a href="http://github.com/indirect">github</a>.
+      read my <a href="http://andre.arko.net/">blog</a> &amp; <a rel="me" href="http://indirect.tumblr.com">tumblr</a>,<br>
+      follow me on <a rel="me" href="http://twitter.com/indirect">twitter</a>,<br>
+      or fork me at <a rel="me" href="http://github.com/indirect">github</a>.
     </p>
 
     <p>
       I can also be found on<br>
-      <a href="http://www.facebook.com/andre.arko">facebook</a>,
-      <a href="http://speakerdeck.com/indirect/">speakerdeck</a>,<br>
-      <a href="http://instagram.com/indirect">instagram</a>,
-      and <a href="mailto:andre@arko.net">email</a>.
+      <a rel="me" href="http://www.facebook.com/andre.arko">facebook</a>,
+      <a rel="me" href="http://speakerdeck.com/indirect/">speakerdeck</a>,<br>
+      <a rel="me" href="http://instagram.com/indirect">instagram</a>,
+      and <a rel="me" href="mailto:andre@arko.net">email</a>.
     </p>
 
   </div>
