add link to projects

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,8 @@
     <p>I founded <a href="https://rubytogether.org">Ruby Together</a>,<br>
       and I'm lead developer of<br>
       <a href="http://bundler.io">Bundler</a>. I co-authored<br>
-      <a href="http://therubyway.io">The Ruby Way</a>, and you<br>
+      <a href="http://therubyway.io">The Ruby Way</a> and built<br>
+      <a href="http://andre.arko.net/projects">some other stuff</a>, or you<br>
       may have <a href="http://andre.arko.net/talks">seen me speak</a>.
     </p>
 
