consolidate opengraph tags

--- a/public/index.html
+++ b/public/index.html
@@ -3,19 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>André Arko</title>
-  <meta name="description" content="Person about the internet">
-  <meta property="og:url" content="https://arko.net">
+  <meta property="description" content="Founder of Ruby Together, lead developer of Bundler, author of The Ruby Way" />
+  <meta property="og:description" content="Founder of Ruby Together, lead developer of Bundler, author of The Ruby Way" />
+  <meta property="og:url" content="https://arko.net" />
   <meta property="og:type" content="website">
-  <meta property="og:title" content="André Arko">
-  <meta property="og:description" content="Person about the internet">
-  <meta property="og:image" content="https://arko.net/andre-banner.jpg">
-
-  <meta name="twitter:card" content="summary_large_image">
-  <meta property="twitter:domain" content="arko.net">
-  <meta property="twitter:url" content="https://arko.net">
-  <meta name="twitter:title" content="André Arko">
-  <meta name="twitter:description" content="Person about the internet">
-  <meta name="twitter:image" content="https://arko.net/andre-banner.jpg">
+  <meta property="og:title" content="André Arko" />
+  <meta property="og:image" content="https://arko.net/andre-banner.jpg" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:creator" content="@indirect" />
 
   <style type="text/css" media="screen">
     body {
