add mastodon and cohost

--- a/public/index.html
+++ b/public/index.html
@@ -73,16 +73,22 @@
   <img src="andre.jpg" alt="André Arko" class="andre" width="300" height="450">
 
   <div class="main">
-    <p>I founded <a href="https://rubytogether.org">Ruby Together</a>,<br>
-      and I'm lead developer of<br>
-      <a href="http://bundler.io">Bundler</a>. I co-authored<br>
-      <a href="http://therubyway.io">The Ruby Way</a> and built<br>
-      <a href="http://andre.arko.net/projects">some other stuff</a>, or you<br>
-      may have <a href="http://andre.arko.net/talks">seen me speak</a>.
+    <p>
+      You might know me from<br>
+      <a href="https://bundler.io">Bundler</a>,
+      <a href="https://rubygems.org">RubyGems</a>, or<br>
+      <a href="https://therubyway.io">The Ruby Way</a>, or you<br>
+      may have <a href="https://andre.arko.net/talks">seen me speak</a>.
     </p>
 
     <p>
-      I work with <a href="http://cloudcity.io">Cloud City</a><br>
+      If you'd like to, you can<br>
+      check out <a href="https://andre.arko.net/projects">my projects</a><br>
+      or read my <a href="https://andre.arko.net/">blog</a>.
+    </p>
+
+    <p>
+      I work with <a href="https://cloudcity.io">Cloud City</a><br>
       building websites. Lots<br>
       of Ruby, Javascript, etc.<br>
       You can <a href="mailto:andre+arko@cloudcity.io">hire us</a> to help<br>
@@ -90,37 +96,22 @@
     </p>
 
     <p>
-      If you'd like to, you can<br>
-      read my <a href="http://andre.arko.net/">blog</a> &amp; <a rel="me" href="http://indirect.tumblr.com">tumblr</a>,<br>
-      follow me on <a rel="me" href="http://twitter.com/indirect">twitter</a>,<br>
-      or fork me at <a rel="me" href="http://github.com/indirect">github</a>.
-    </p>
-
-    <p>
       I can also be found on<br>
-      <a rel="me" href="http://www.facebook.com/andre.arko">facebook</a>,
-      <a rel="me" href="http://speakerdeck.com/indirect/">speakerdeck</a>,<br>
-      <a rel="me" href="http://instagram.com/indirect">instagram</a>,
-      and <a rel="me" href="mailto:andre@arko.net">email</a>.
+      <a rel="me" href="mailto:andre@arko.net">email</a>,
+      <a rel="me" href="https://github.com/indirect">github</a>,
+      <a rel="me" href="https://fiasco.social/indirect">mastodon</a>,
+      <br>
+      <a rel="me" href="https://indirect.io">tumblr</a>,
+      <a rel="me" href="https://cohost.org/indirect">cohost</a>,
+      <a rel="me" href="https://twitter.com/indirect">twitter</a>,
+      <br>
+      <a rel="me" href="https://instagram.com/indirect">instagram</a>, and
+      <a rel="me" href="https://www.facebook.com/andre.arko">facebook</a>.
     </p>
 
   </div>
 
   <script src="https://use.typekit.net/qhr5xpd.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
-  <script type="text/javascript">
-    // Async Google Analytics
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-306556-1']);
-    _gaq.push(['_trackPageview']);
-    _gaq.push(['_setDomainName', '.arko.net']);
-    _gaq.push(['_trackPageview']);
-
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ga);
-    })();
-  </script>
 </body>
 </html>
