--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
       I can also be found on<br>
       <a rel="me" href="mailto:andre@arko.net">email</a>,
       <a rel="me" href="https://github.com/indirect">github</a>,
-      <a rel="me" href="https://fiasco.social/indirect">mastodon</a>,
+      <a rel="me" href="https://fiasco.social/@indirect">mastodon</a>,
       <br>
       <a rel="me" href="https://indirect.io">tumblr</a>,
       <a rel="me" href="https://cohost.org/indirect">cohost</a>,
