--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@
       <br>
       <a rel="me" href="https://indirect.io">tumblr</a>,
       <a rel="me" href="https://cohost.org/indirect">cohost</a>,
-      <a rel="me" href="https://twitter.com/indirect">twitter</a>,
+      <a rel="me" href="https://bsky.app/profile/indirect.bsky.social">bluesky</a>,
       <br>
       <a rel="me" href="https://instagram.com/indirect">instagram</a>, and
       <a rel="me" href="https://www.facebook.com/andre.arko">facebook</a>.
