--- a/public/index.html
+++ b/public/index.html
@@ -99,13 +99,13 @@
       I can also be found on<br>
       <a rel="me" href="mailto:andre@arko.net">email</a>,
       <a rel="me" href="https://github.com/indirect">github</a>,
-      <a rel="me" href="https://fiasco.social/@indirect">mastodon</a>,
-      <br>
-      <a rel="me" href="https://indirect.io">tumblr</a>,
       <a rel="me" href="https://bsky.app/profile/indirect.bsky.social">bluesky</a>,
       <br>
-      <a rel="me" href="https://instagram.com/indirect">instagram</a>, and
-      <a rel="me" href="https://www.facebook.com/andre.arko">facebook</a>.
+      <a rel="me" href="https://fiasco.social/@indirect">mastodon</a>,
+      <a rel="me" href="https://instagram.com/indirect">instagram</a>,
+      <br>
+      <a rel="me" href="https://indirect.io">tumblr</a>, and
+      <a rel="me" href="https://linkedin.com/in/andrearko">linkedin</a>.
     </p>
 
   </div>
