--- a/public/index.html
+++ b/public/index.html
@@ -32,11 +32,12 @@
 
     a {
       color: #222;
-      text-decoration: none;
-      border-bottom: 1px solid #222;
+      text-decoration-color: #222;
+      text-decoration-thickness: 1px;
+      text-underline-offset: 3px;
     }
-    a:hover, a:visited:hover { border: none; }
-    a:visited { border-color: #AAA; }
+    a:visited { text-decoration-color: #AAA; }
+    a:hover, a:visited:hover { text-decoration-color: transparent; }
 
     @media (prefers-color-scheme: dark) {
       body {
