fix phone viewport size so small css applies

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>André Arko</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="description" content="Founder of Ruby Together, lead developer of Bundler, author of The Ruby Way" />
   <meta property="og:description" content="Founder of Ruby Together, lead developer of Bundler, author of The Ruby Way" />
   <meta property="og:url" content="https://arko.net" />
