--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,10 @@
       font-weight: 600;
     }
 
+    .main {
+      max-width: 10.5em;
+    }
+
     a {
       color: #222;
       text-decoration-color: #222;
@@ -86,38 +90,37 @@
 
   <div class="main">
     <p>
-      You might know me from<br>
+      You might know me from
       <a href="https://bundler.io">Bundler</a>,
-      <a href="https://rubygems.org">RubyGems</a>, or<br>
-      <a href="https://therubyway.io">The Ruby Way</a>, or you<br>
+      <a href="https://rubygems.org">RubyGems</a>, or
+      <a href="https://therubyway.io">The Ruby Way</a>, or you
       may have <a href="https://andre.arko.net/talks">seen me speak</a>.
     </p>
 
     <p>
-      If you'd like to, you can<br>
-      check out <a href="https://andre.arko.net/projects">my projects</a><br>
-      or read my <a href="https://andre.arko.net/">blog</a>.
+      If you'd like to, you can
+      check out <a href="https://andre.arko.net/projects">my projects</a>
+      or read my
+      <a href="https://andre.arko.net/note/">notes</a> and
+      <a href="https://andre.arko.net/">blog</a>.
     </p>
 
     <p>
-      I work with <a href="https://cloudcity.io">Cloud City</a><br>
-      building websites. Lots<br>
-      of Ruby, Javascript, etc.<br>
-      You can <a href="mailto:andre+arko@cloudcity.io">hire us</a> to help<br>
-      you build your own app.
+      I work at <a href="https://spinel.coop">Spinel.coop</a>, where we build next-gen developer tools
+      and offer core team expertise to companies using Rails, Stimulus, Bundler, etc.
     </p>
 
     <p>
-      I can also be found on<br>
+      I can also be found on
       <a rel="me" href="mailto:andre@arko.net">email</a>,
-      <a rel="me" href="https://github.com/indirect">github</a>,
-      <a rel="me" href="https://bsky.app/profile/indirect.bsky.social">bluesky</a>,
-      <br>
-      <a rel="me" href="https://fiasco.social/@indirect">mastodon</a>,
-      <a rel="me" href="https://instagram.com/indirect">instagram</a>,
-      <br>
-      <a rel="me" href="https://indirect.io">tumblr</a>, and
-      <a rel="me" href="https://linkedin.com/in/andrearko">linkedin</a>.
+      <a rel="me" href="https://github.com/indirect">GitHub</a>,
+      <a rel="me" href="https://bsky.app/profile/indirect.bsky.social">Bluesky</a>,
+
+      <a rel="me" href="https://fiasco.social/@indirect">Mastodon</a>,
+      <a rel="me" href="https://instagram.com/indirect">Instagram</a>,
+
+      <a rel="me" href="https://indirect.io">Tumblr</a>, and
+      <a rel="me" href="https://linkedin.com/in/andrearko">LinkedIn</a>.
     </p>
   </div>
 
