update bsky handle

--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
       I can also be found on
       <a rel="me" href="mailto:andre@arko.net">email</a>,
       <a rel="me" href="https://github.com/indirect">GitHub</a>,
-      <a rel="me" href="https://bsky.app/profile/indirect.bsky.social">Bluesky</a>,
+      <a rel="me" href="https://bsky.app/profile/indirect.io">Bluesky</a>,
 
       <a rel="me" href="https://fiasco.social/@indirect">Mastodon</a>,
       <a rel="me" href="https://instagram.com/indirect">Instagram</a>,
