--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,11 @@
   <meta property="og:image" content="https://arko.net/andre-banner.jpg" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:creator" content="@indirect" />
+  <meta name="fediverse:creator" content="@indirect@fiasco.social">
+  <link rel="me" href="https://github.com/indirect">
+  <link rel="me" href="https://bsky.app/profile/indirect.io">
+  <link rel="me" href="https://fiasco.social/@indirect">
+  <link rel="me" href="https://instagram.com/indirect">
 
   <style type="text/css" media="screen">
     body {
